; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/rsaenh/extr_aes.c_setup_mix.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/rsaenh/extr_aes.c_setup_mix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Te4_3 = common dso_local global i32* null, align 8
@Te4_2 = common dso_local global i32* null, align 8
@Te4_1 = common dso_local global i32* null, align 8
@Te4_0 = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @setup_mix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setup_mix(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32*, i32** @Te4_3, align 8
  %4 = load i32, i32* %2, align 4
  %5 = call i64 @byte(i32 %4, i32 2)
  %6 = getelementptr inbounds i32, i32* %3, i64 %5
  %7 = load i32, i32* %6, align 4
  %8 = load i32*, i32** @Te4_2, align 8
  %9 = load i32, i32* %2, align 4
  %10 = call i64 @byte(i32 %9, i32 1)
  %11 = getelementptr inbounds i32, i32* %8, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = xor i32 %7, %12
  %14 = load i32*, i32** @Te4_1, align 8
  %15 = load i32, i32* %2, align 4
  %16 = call i64 @byte(i32 %15, i32 0)
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = xor i32 %13, %18
  %20 = load i32*, i32** @Te4_0, align 8
  %21 = load i32, i32* %2, align 4
  %22 = call i64 @byte(i32 %21, i32 3)
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  %24 = load i32, i32* %23, align 4
  %25 = xor i32 %19, %24
  ret i32 %25
}

declare dso_local i64 @byte(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
